--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,7 @@ bs4~=0.0.2
 numpy~=1.26.4
 matplotlib==3.9.2
 autogluon==1.1.1
+catboost==1.2.7
+scikit-learn===1.4.0
+webdriver-manager==4.0.2
+selenium==4.25.0
